@@ -1,0 +1,229 @@
+begin_unit
+begin_package
+DECL|package|org.apache.lucene.search.spans
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+package|;
+end_package
+begin_comment
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+begin_comment
+comment|/**  * A {@link Spans} implementation which allows wrapping another spans instance  * and override some selected methods.  */
+end_comment
+begin_class
+DECL|class|FilterSpans
+specifier|public
+class|class
+name|FilterSpans
+extends|extends
+name|Spans
+block|{
+comment|/** The wrapped spans instance. */
+DECL|field|in
+specifier|protected
+specifier|final
+name|Spans
+name|in
+decl_stmt|;
+comment|/** Wrap the given {@link Spans}. */
+DECL|method|FilterSpans
+specifier|public
+name|FilterSpans
+parameter_list|(
+name|Spans
+name|in
+parameter_list|)
+block|{
+name|this
+operator|.
+name|in
+operator|=
+name|in
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|next
+specifier|public
+name|boolean
+name|next
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+name|in
+operator|.
+name|next
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|skipTo
+specifier|public
+name|boolean
+name|skipTo
+parameter_list|(
+name|int
+name|target
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|in
+operator|.
+name|skipTo
+argument_list|(
+name|target
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|doc
+specifier|public
+name|int
+name|doc
+parameter_list|()
+block|{
+return|return
+name|in
+operator|.
+name|doc
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|start
+specifier|public
+name|int
+name|start
+parameter_list|()
+block|{
+return|return
+name|in
+operator|.
+name|start
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|end
+specifier|public
+name|int
+name|end
+parameter_list|()
+block|{
+return|return
+name|in
+operator|.
+name|end
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getPayload
+specifier|public
+name|Collection
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+name|getPayload
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+name|in
+operator|.
+name|getPayload
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|isPayloadAvailable
+specifier|public
+name|boolean
+name|isPayloadAvailable
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+name|in
+operator|.
+name|isPayloadAvailable
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|cost
+specifier|public
+name|long
+name|cost
+parameter_list|()
+block|{
+return|return
+name|in
+operator|.
+name|cost
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|toString
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+literal|"Filter("
+operator|+
+name|in
+operator|.
+name|toString
+argument_list|()
+operator|+
+literal|")"
+return|;
+block|}
+block|}
+end_class
+end_unit
