@@ -1,0 +1,150 @@
+begin_unit
+begin_package
+DECL|package|org.apache.lucene.search.spans
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+package|;
+end_package
+begin_comment
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements. See the NOTICE file distributed with this  * work for additional information regarding copyright ownership. The ASF  * licenses this file to You under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance with the License.  * You may obtain a copy of the License at  *   * http://www.apache.org/licenses/LICENSE-2.0  *   * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the  * License for the specific language governing permissions and limitations under  * the License.  */
+end_comment
+begin_import
+import|import
+name|java
+operator|.
+name|lang
+operator|.
+name|reflect
+operator|.
+name|Method
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|LuceneTestCase
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+begin_class
+DECL|class|TestFilterSpans
+specifier|public
+class|class
+name|TestFilterSpans
+extends|extends
+name|LuceneTestCase
+block|{
+annotation|@
+name|Test
+DECL|method|testOverrides
+specifier|public
+name|void
+name|testOverrides
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// verify that all methods of Spans are overridden by FilterSpans,
+comment|// except those under the 'exclude' list
+name|Set
+argument_list|<
+name|Method
+argument_list|>
+name|exclude
+init|=
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Method
+name|m
+range|:
+name|FilterSpans
+operator|.
+name|class
+operator|.
+name|getMethods
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|m
+operator|.
+name|getDeclaringClass
+argument_list|()
+operator|==
+name|Spans
+operator|.
+name|class
+condition|)
+block|{
+name|assertTrue
+argument_list|(
+literal|"method "
+operator|+
+name|m
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" not overridden!"
+argument_list|,
+name|exclude
+operator|.
+name|contains
+argument_list|(
+name|m
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+block|}
+end_class
+end_unit
